<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Product Name [CHAR LIMIT=30] -->
    <string name="category_name">Product Name</string>

    <!-- Product price [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Product quantity [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Supplier name [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Name</string>

    <!-- Supplier phone number [CHAR LIMIT=30] -->
    <string name="category_phone">Supplier Phone Number</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier">Supplier Name</string>
    <string name="hint_product_phone">Phone</string>
    <string name="editor_new_product">Add product</string>
    <string name="sale_button">sale</string>
    <string name="in_stock">In Stock</string>
    <string name="hint_book_name">How To Solve It</string>
    <string name="category_book">Book</string>
    <string name="category_supplier_phone">Supplier Phone</string>
    <string name="empty_view_title_text">There\'s No Books, Start Adding :)</string>
    <string name="no_stock">No Stock Left</string>
    <string name="action_edit">Edit</string>
    <string name="delete_dialog_msg">Delete This Product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Product Deleted</string>
    <string name="editor_delete_product_failed">Error Deleting the Product</string>
    <string name="editing_product">Edit Product</string>
    <string name="editor_update_book_successful">Product Updated</string>
    <string name="editor_update_book_failed">Update Failed</string>
    <string name="editor_insert_book_successful">Insert Success</string>
    <string name="editor_insert_book_failed">Insert Failed</string>
    <string name="provider_requires_name">Requiring a Name</string>
    <string name="provider_requires_price">Insert a Price</string>
    <string name="provider_requires_quantity">Insert a Quantity</string>
    <string name="provider_requires_supplier_name">insert Supplier Name</string>
    <string name="provider_requires_supplier_phone">insert supplier Phone Number</string>
    <string name="editor_delete_book_failed">Deletion Failed</string>
    <string name="unsaved_changes_dialog_msg">Discard and Quit</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">keep Editing</string>

</resources>
